# Gobang

./: AI.cpp  AI.h  CMakeLists.txt  Chess.cpp  Chess.h  ChessGame.cpp  Man.cpp  Man.h  README.md  main.cpp
cpp/: AI.cpp  Chess.cpp  ChessGame.cpp  Man.cpp  main.cpp
h/: AI.h  Chess.h  ChessGame.h
